# p1-starting-an-api-cailindelgado

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
