[project]
name = "p1-starting-an-api-cailindelgado"
version = "0.1.0"
description = ""
authors = [
    {name = "Cailin Delgado",email = "127582029+cailindelgado@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
